@@ -36,7 +36,7 @@ class zm_useo2 extends ZMPlugin {
      * Create new instance.
      */
     function __construct() {
-        parent::__construct('ZenMagick Ultimate SEO2', 'Ultimate SEO 2.x for ZenMagick', '${plugin.version}');
+        parent::__construct('Ultimate SEO2', 'Ultimate SEO 2.x for ZenMagick', '${plugin.version}');
         $this->setLoaderSupport('ALL');
     }
 
