@@ -58,6 +58,7 @@ Release 0.9.2
 - add new coupon email templates
 - add setting 'downloadOrderStatusList'
 - add ZMDownload
+- make plugin order consistent (as per API docs ordered by sort_order/name)
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
